<resources>
    <string name="app_name">PracticeTest</string>
    <string name="screen1_description">Screen1.java contains following topics:</string>
    <string name="screen1_topic_toast">Toast</string>
    <string name="screen1_topic_snackbar">Snackbar</string>
    <string name="screen1_topic_notification">Notification</string>
    <string name="screen1_topic_jobScheduler">JobScheduler</string>
    <string name="title_activity_screen2">Screen2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="screen2_description">Screen2.java contains following topics:</string>
    <string name="screen2_topic_menu">Items in Menu bar with and without image</string>
    <string name="screen2_topic_TabLayout">Lab Layout (user navigation)</string>
    <string name="screen2_topic_RecyclerView">RecyclerView(Room + LiveData + Repository + ViewModel)</string>
    <string name="settingsPref_checkbox">are you student?</string>
    <string name="settingsPref_listView">Country Preferred</string>

    <array name="settings_listPreference_entry">
        <item>India</item>
        <item>Rusia</item>
        <item>China</item>
    </array>
    <array name="settings_listPreference_entry_value">
        <item>India</item>
        <item>Rusia</item>
        <item>China</item>
    </array>
</resources>
